--- a/app/templates/plr_base.html
+++ b/app/templates/plr_base.html
@@ -51,7 +51,7 @@
                     </li>
 
                     <li class="menu-item-divided">
-                        <a href="#">2048</a>
+                        <a href="{{ url_for('games.game_2048') }}">2048</a>
                     </li>
 
                     <li class="menu-item-divided">
