--- a/app/templates/plr_base.html
+++ b/app/templates/plr_base.html
@@ -35,7 +35,7 @@
                     </li>
 
                     <li class="menu-item-divided">
-                        <a href="#">今日新闻</a>
+                        <a href="http://zj.qq.com">今日新闻</a>
                     </li>
 
                     <li>
@@ -47,7 +47,7 @@
                     </li>
 
                     <li>
-                        <a href="http://m.autohome.com.cn/" target="_blank">汽车资讯</a>
+                        <a href="http://m.autohome.com.cn/">汽车资讯</a>
                     </li>
 
                     <li class="menu-item-divided">
@@ -63,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a href="#">外卖信息</a>
+                        <a href="{{ url_for('plr.list_waimai') }}">外卖信息</a>
                     </li>
 
                     <li>
