--- a/app/templates/zaiwenling/waimai.html
+++ b/app/templates/zaiwenling/waimai.html
@@ -1,4 +1,4 @@
-{% extends "plr_base.html" %}
+{% extends "zaiwenling_base.html" %}
 
 {% block header %}
 
@@ -15,7 +15,7 @@
 
         <div>
 
-        
+
         <table class="pure-table pure-table-bordered" >
         	<tbody>
         		<tr><td>地址</td><td>{{ waimai.address }}</td></tr>
