--- a/app/templates/zaiwenling_base.html
+++ b/app/templates/zaiwenling_base.html
@@ -31,7 +31,7 @@
 
                 <ul>
                     <li class="menu-item-divided">
-                        <a href="{{ url_for('plr.index') }}">首页</a>
+                        <a href="{{ url_for('zaiwenling.index') }}">首页</a>
                     </li>
 
                     <li class="menu-item-divided">
@@ -39,7 +39,7 @@
                     </li>
 
                     <li>
-                        <a href="{{ url_for('plr.list_music') }}">音乐推荐</a>
+                        <a href="{{ url_for('zaiwenling.list_music') }}">音乐推荐</a>
                     </li>
 
                     <li>
@@ -63,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a href="{{ url_for('plr.list_waimai') }}">外卖信息</a>
+                        <a href="{{ url_for('zaiwenling.list_waimai') }}">外卖信息</a>
                     </li>
 
                     <li>
