--- a/app/templates/zaiwenling_base.html
+++ b/app/templates/zaiwenling_base.html
@@ -71,7 +71,11 @@
                     </li>
 
                     <li class="menu-item-divided">
-                        <a href="#">关于我们</a>
+                        <a href="{{ url_for('zaiwenling.about') }}">关于我们</a>
+                    </li>
+
+                    <li class="">
+                        <a href="{{ url_for('zaiwenling.bd') }}">商务合作</a>
                     </li>
                 </ul>
             </div>
@@ -92,5 +96,15 @@
 
 
     <script src="/static/js/ui.js"></script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49394114-1', 'wei3h.com');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
