add update waimai

--- a/app/templates/zaiwenling/bd.html
+++ b/app/templates/zaiwenling/bd.html
@@ -17,14 +17,14 @@
 	<p></p>
 
 
-	<table class="pure-table pure-table-bordered">
+	<table class="pure-table pure-table-bordered" style="font-size:12px">
 
 
 		<tbody>
-		<tr><th>地址</th><th>时代广场</th></tr>
-		<tr><th>联系电话</th><th>111</th></tr>
-		<tr><th>qq</th><th>111</th></tr>
-		<tr><th>emaik</th><th>qqq</th></tr>
+		<tr><th>地址</th><th>时代大厦3幢1单元1203室</th></tr>
+		<tr><th>联系电话</th><th>13386540089</th></tr>
+		<tr><th>QQ</th><th>504923637</th></tr>
+		<tr><th>E-mail</th><th>zaiwenling@126.com</th></tr>
 
 		</tbody>
 	</table>
