add wechat api and config zaiwenling's api

--- a/app/templates/games/2048.html
+++ b/app/templates/games/2048.html
@@ -66,7 +66,7 @@
     </div>
 
     <p class="game-explanation">
-      &copy; Wei3h | <a href="http://www.wei3h.com/zaiwenling">关于我们</a> | <a href="http://www.miitbeian.gov.cn/" target="_blank" style="color:#737573;text-decoration:none;">浙ICP备140007672号</a>
+      &copy; Wei3h | <a href="http://www.wei3h.com/zaiwenling">关于我们</a>
   </div>
 
   <script src="/static/js/2048/animframe_polyfill.js"></script>
