--- a/app/templates/account/signin.html
+++ b/app/templates/account/signin.html
@@ -1,8 +1,8 @@
     <form class="panel-body" role="form" method="post" action="{{ url_for('account.signin') }}">
       <h2>Sign In</h2>
       {{ form.csrf_token }}
-      {{ form.phone }}
-      {{ form.password }}
+      <div>{{ form.phone.label }}{{ form.phone }}</div>
+      <div>{{ form.password.label }}{{ form.password }}</div>
 
       <div class="form-group">
         {{ form.permanent() }} {{ form.permanent.label() }}
