--- a/app/templates/games/2048.html
+++ b/app/templates/games/2048.html
@@ -64,7 +64,8 @@
 
       </div>
     </div>
-
+<p>滑动方块，是两个相同的块重合就获得新的方块，类似于2+2=4 4+4=8.</p>
+    <p>如果你玩儿出了2048的方块，就请截图发给在温岭官方微信（<b>wzaiwenling</b>），有惊惊惊惊惊喜在等你！！！！
     <p class="game-explanation">
       &copy; Wei3h | <a href="http://www.wei3h.com/zaiwenling">关于我们</a>
   </div>
