--- a/app/templates/zaiwenling/music.html
+++ b/app/templates/zaiwenling/music.html
@@ -8,6 +8,7 @@
   <meta name=apple-mobile-web-app-capable content=yes>
   <meta name=apple-mobile-web-app-status-bar-style content=black>
 	<link rel="stylesheet" href="/static/css/music.css" type="text/css" media="screen" charset="utf-8">
+	<link rel="shortcut icon" href="/static/img/ico/favicon.ico">
   <!--[if lte IE 8]>
   <link rel="stylesheet" href="/static/assets/ie.css" type="text/css" media="screen" charset="utf-8">
   <![endif]-->
