--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
+    <link rel="shortcut icon" href="/static/img/ico/favicon.ico">
 
     <title>选择公众账号</title>
 
@@ -16,7 +16,6 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/css/jumbotron-narrow.css" rel="stylesheet">
-    <link href="/static/css/doc.min.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -37,7 +36,7 @@
           <li><a href="#">帮助</a></li>
           <li><a href="{{ url_for('account.signout') }}">退出</a></li>
         </ul>
-        <h3 class="text-muted">Wei3h</h3>
+        <h3 class="text-muted">微购物</h3>
       </div>
 
       <div class="jumbotron">
@@ -46,13 +45,13 @@
 
       <div class="row marketing">
 
-      <div class="bs-callout bs-callout-info">
+<!--       <div class="bs-callout bs-callout-info">
     <h4>header</h4>
     <p>ppp</p>
 
 
   </div>
-
+ -->
 
   <div class="table-responsive">
   <table class="table">
@@ -69,11 +68,11 @@
         <tr>
           <th>{{ loop.index }}</th>
           <th>{{ wxuser.wxname }}</th>
-          <th>{{ wxuser.created }} / {{ wxuser.deadtime }}</th>
+          <th>{{ wxuser.created }} / {% if (today - wxuser.deadtime).total_seconds() > 259200 %}{{ wxuser.deadtime }}{% else %}<code>{{ wxuser.deadtime }}</code>{% endif %}</th>
           <th>
             <a href="#">编辑</a> |
             <a href="#">删除</a>
-            <a href="#" class="btn-sm btn-primary">功能管理</a>
+            <a href="{{ url_for('dashboard.wxuser_dashboard', id=wxuser.id) }}" class="btn-sm btn-primary">功能管理</a>
             <button href="#" class="btn-sm btn-primary" data-toggle="modal" data-target="#myModal{{ wxuser.id }}">API接口</button>
 
 
@@ -88,7 +87,7 @@
         <h4 class="modal-title" id="myModalLabel">{{ wxuser.wxname }}</h4>
       </div>
       <div class="modal-body">
-        <p>URL http://wei3h.com/zaiwenling/api/{{ wxuser.token }}</p>
+        <p>URL http://wei3h.com/wechat/api/{{ wxuser.token }}</p>
         <p>Token {{ wxuser.token }}</p>
       </div>
       </div>
@@ -100,6 +99,61 @@
   </table>
 </div>
 
+<button href="#" class="btn-sm btn-warning" data-toggle="modal" data-target="#addWxuser">添加公众账号</button>
+
+<div class="modal fade" id="addWxuser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      </div>
+      <div class="modal-body">
+<form method="POST" action="{{ url_for('wechat.add_wechat') }}" class="form">
+{{ form.csrf_token }}
+  <div class="form-group">
+    <label for="">公众号名称</label>
+    <input type="text" name="wxname" class="form-control" placeholder="公众号名称" required autofocus>
+  </div>
+  <div class="form-group">
+    <label for="">公众号原始id</label>
+    <input type="text" name="wxid" class="form-control" placeholder="公众号原始id" required>
+    <p class="help-block">请认真填写, 以后不能修改.</p>
+  </div>
+  <div class="form-group">
+    <label for="">微信号</label>
+    <input type="text" name="weixin" class="form-control" placeholder="公众号原始id" required>
+    <p class="help-block">请认真填写, 以后不能修改.</p>
+  </div>
+  <div class="form-group">
+    <label for="">头像地址</label>
+    <input type="text" name="weixin" class="form-control" placeholder="头像地址">
+  </div>
+  <div class="form-group">
+    <label for="">账号类型</label>
+    <select class="form-control" id="typeid" name="typeid"><option value="0">订阅号</option><option value="1">服务号</option></select>
+  </div>
+  <div class="form-group">
+    <label for="">AppID</label>
+    <input type="text" name="appid" class="form-control" placeholder="AppID">
+  </div>
+  <div class="form-group">
+    <label for="">AppSecret</label>
+    <input type="text" name="appsecret" class="form-control" placeholder="AppSecret">
+  </div>
+  <button type="submit" class="btn btn-default">添加</button>
+</form>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+</div>
+
 
 
 
@@ -109,8 +163,8 @@
 
     </div> <!-- /container -->
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
+        <script src="/static/js/jquery-1.10.2.min.js"></script>
+    <script src="/static/js/modal.js"></script>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
