--- a/app/templates/games/2048.html
+++ b/app/templates/games/2048.html
@@ -5,7 +5,7 @@
   <title>2048</title>
 
   <link href="/static/css/2048/main.css" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="/static/img/favicon.ico">
   <link rel="apple-touch-icon" href="/static/img/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
@@ -65,7 +65,7 @@
       </div>
     </div>
 <p>滑动方块，是两个相同的块重合就获得新的方块，类似于2+2=4 4+4=8.</p>
-    <p>如果你玩儿出了2048的方块，就请截图发给在温岭官方微信（<b>wzaiwenling</b>），有惊惊惊惊惊喜在等你！！！！
+    <p>如果你玩儿出了2048的方块，就请截图发给在温岭官方微信（<b>zaiwenling</b>），有惊惊惊惊惊喜在等你！！！！
     <p class="game-explanation">
       &copy; Wei3h | <a href="http://www.wei3h.com/zaiwenling">关于我们</a>
   </div>
