--- a/app/templates/zaiwenling_base.html
+++ b/app/templates/zaiwenling_base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
 
+    <link rel="shortcut icon" href="/static/img/ico/favicon.ico">
     <title>&#64;zaiwenling</title>
 
     <link rel="stylesheet" href="/static/css/pure-min.css">
