--- a/app/templates/dashboard/weshop_index_settings.html
+++ b/app/templates/dashboard/weshop_index_settings.html
@@ -18,7 +18,7 @@
 			<i class="icon-double-angle-right"></i>
 				http://wei3h.com/weigou/homepage?token={{ shop._id }}&openid=fromUsername
 		</small>
-		<button class="btn btn-success">预览</button>
+		<a class="btn btn-success" href="http://127.0.0.1:5000/weigou/homepage?token={{ shop._id }}&openid=fromUsername" target="_blank">预览</a>
 	</h1>
 </div>
 {% endif %}
