--- a/app/templates/zaiwenling_base.html
+++ b/app/templates/zaiwenling_base.html
@@ -16,6 +16,11 @@
     <!--[if gt IE 8]><!-->
         <link rel="stylesheet" href="/static/css/side-menu.css">
     <!--<![endif]-->
+      <script type="text/javascript">
+    document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
+WeixinJSBridge.call('hideOptionMenu');
+});
+  </script>
 </head>
 <body>
 
