--- a/app/templates/games/2048.html
+++ b/app/templates/games/2048.html
@@ -22,8 +22,8 @@
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">将相同的数字合并直到 <strong>2048 !</strong></p>
-
+<!--     <p class="game-intro">将相同的数字合并直到 <strong>2048 !  -- @在温岭</strong></p>
+ -->
     <div class="game-container">
       <div class="game-message">
         <p></p>
@@ -78,5 +78,16 @@
   <script src="/static/js/2048/local_score_manager.js"></script>
   <script src="/static/js/2048/game_manager.js"></script>
   <script src="/static/js/2048/application.js"></script>
+
+      <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49394114-1', 'wei3h.com');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
