--- a/app/templates/weigou_base.html
+++ b/app/templates/weigou_base.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="/static/css/style.css">
 <script type="text/javascript" src="/static/js/zepto.min.js"></script>
 
-<title>{{ title }}</title>
+<title>{{ shop.title }}</title>
 </head>
 
 <body>
